--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^9.3.0",
     "husky": "^9.1.6",
     "prettier": "^3.3.3",
+    "react-native-svg": "^15.12.1",
     "turbo": "^1.13.4",
     "typescript": "~5.8.3",
     "ultra-runner": "^3.10.5",
